--- a/css/layout.less
+++ b/css/layout.less
@@ -270,8 +270,8 @@ dvnnm {text-transform: uppercase;}
   line-height: 1em;
   text-align: right;
 }
-.showHebrew .english { float: right; width: 45%; padding: 0 2%; }
-.showHebrew .original { display: block; float: left; padding: 0 4% 0 2%; width: 43%; }
+.english { float: right; width: 45%; padding: 0 2%; }
+.original { display: block; float: left; padding: 0 4% 0 2%; width: 43%; }
 .hebrew span { margin: 0 2px; }
 .hebrew seg {display:none;}
 
