--- a/css/layout.less
+++ b/css/layout.less
@@ -150,7 +150,9 @@ form ul li {list-style:none;}
 	display: block;
 	left: 201px;
 	right: 202px;
-//	overflow: hidden;
+	max-height: 200px;
+	overflow: scroll;
+	padding: .5rem;
 	position: fixed;
 	z-index:8;
 	color: #000;
@@ -173,9 +175,6 @@ form ul li {list-style:none;}
 #wordControlPanel .definitions {
 	float: right;
 	width: 49%;
-}
-.control-panel{
-	padding: 7px;
 }
 .top.left .control-panel {
 	border-top-left-radius: 0;
