--- a/css/layout.less
+++ b/css/layout.less
@@ -66,10 +66,11 @@ ul.verseSelect {margin:0 0 0 5px; width:35px;}
 .goToPanel {
 	h2 {
 		background: #ccc;
+		color: #666;
+		font-weight: 100;
 		height: @dock-height + 1;
-		a {
-			color: #fff;
-		}
+		line-height: 2em;
+		padding-left: .5em;
 	}
 	div {
 		position: relative;
