--- a/css/layout.less
+++ b/css/layout.less
@@ -358,6 +358,7 @@ input, select {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	line-height: 2em;
+	height: 2em;
 }
 input {
 	text-indent: .5em;
@@ -419,6 +420,9 @@ form.search {
 		font-family: 'Helvetica Neue';
 		font-weight: 100;
 		height: 2em;
+	}
+	select, input {
+		vertical-align: middle;
 	}
 	.heading-wrapper {
 		font-size: 160%;
