--- a/css/layout.css
+++ b/css/layout.css
@@ -471,6 +471,9 @@ input {
   text-indent: .5em;
   width: 100%;
 }
+input[type=checkbox] {
+  box-shadow: none;
+}
 label.has-placeholder {
   display: none;
 }
@@ -488,6 +491,7 @@ input[type=submit] {
   padding: 3px;
 }
 form input[type=checkbox] {
+  height: 20px;
   width: 20px;
 }
 /*Search form*/
@@ -800,4 +804,16 @@ form.search #advanced {
   display: none;
   font-size: 26px;
   right: 50px;
+}
+#settings-popup ul {
+  margin: 0;
+}
+#settings-popup label {
+  display: inline-block;
+  line-height: 2em;
+  margin-bottom: 1rem;
+  width: 150px;
+}
+#settings-popup select {
+  width: 150px;
 }
