changes to the installation page

--- a/css/layout.css
+++ b/css/layout.css
@@ -481,14 +481,14 @@ button,
 input[type=button],
 input[type=submit] {
   border: none;
-  background: #666;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #323232), color-stop(1, #646464));
-  background: -moz-linear-gradient(center bottom, #323232 0%, #646464 100%);
+  box-shadow: none;
+  background: #999;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   color: #fff;
-  padding: 3px;
+  font-family: 'Helvetica Neue';
+  font-weight: 100;
 }
 form input[type=checkbox] {
   height: 20px;
@@ -788,6 +788,52 @@ form.search #advanced {
   bottom: 0;
   text-align: center;
   z-index: 10;
+}
+.full-page .content {
+  font-weight: 300;
+  margin: 0 auto;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  max-width: 600px;
+}
+.full-page .content .logo {
+  overflow: auto;
+  position: relative;
+}
+.full-page .content .logo h1 {
+  font-size: 3rem;
+  font-weight: 100;
+}
+.full-page .content .logo svg {
+  float: left;
+  margin-right: 1rem;
+}
+.full-page .content .features {
+  margin-top: 1em;
+}
+.full-page .content .features ul {
+  list-style: disc;
+  margin: 0 0 0 1em;
+}
+.full-page .content .features p {
+  margin-bottom: 1rem;
+}
+.full-page .content .button {
+  margin: 1em 0;
+  text-align: center;
+}
+.full-page .content .button .installation-info {
+  margin-top: 1rem;
+}
+.full-page .content .button button {
+  background: #333;
+  cursor: pointer;
+  font-size: 3rem;
+  padding: .5rem 1rem;
+}
+.full-page .content .button button[disabled] {
+  background: #ccc;
 }
 .reading-mode-switch {
   font-size: 14px;
