--- a/css/layout.less
+++ b/css/layout.less
@@ -181,8 +181,8 @@ form ul li {list-style:none;}
 	width: 49%;
 }
 #wordControlPanel .definitions {
-	float: right;
-	width: 49%;
+	float: left;
+	width: 47%;
 }
 .top.left .control-panel {
 	border-top-left-radius: 0;
@@ -501,7 +501,7 @@ form.search {
 	form.search {
 		background: #ccc;
 		padding: .1rem .5rem .5rem;
-		position: fixed;
+		position: absolute;
 		right: 0;
 		top: 0;
 		z-index: 1;
