--- a/css/layout.less
+++ b/css/layout.less
@@ -97,6 +97,15 @@ ul.verseSelect {margin:0 0 0 5px; width:35px;}
 
 }
 
+.bookSelect {
+	.icon-book {
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 13px;
+	}
+}
+
 .panel .heading-wrapper {margin: 0 auto; text-align: center;}
 .panel .heading {font-size: 2em; text-align: center; position: fixed; width: 300px;}
 .panel .heading select {position:relative;z-index:1;}
