--- a/css/layout.css
+++ b/css/layout.css
@@ -614,7 +614,6 @@ form.search #advanced {
 .goToPanel, .searchPanel {
   background: #fff;
   bottom: 0;
-  overflow: scroll;
   position: fixed;
   top: 51px;
   width: 200px;
@@ -624,8 +623,12 @@ form.search #advanced {
   border-right: 1px solid #ccc;
   left: 0;
   width: 220px; }
+  .goToPanel .bookSelect {
+    height: 100%;
+    overflow: scroll; }
 
 .searchPanel {
+  overflow: scroll;
   border-left: 1px solid #ccc;
   float: right;
   right: 0;
@@ -673,9 +676,62 @@ form.search #advanced {
 
 .menu {
   background: #333;
-  left: -220px; }
+  border: none;
+  color: #fff;
+  font-weight: 100;
+  height: 100%;
+  left: -200px;
+  position: fixed;
+  top: 0;
+  width: 200px; }
+  .menu .open-menu {
+    background: #333;
+    display: block;
+    line-height: 2em;
+    padding: 0 10px;
+    text-indent: 0;
+    position: absolute;
+    right: -76px;
+    top: 44px;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg);
+    font-weight: 100;
+    width: 100px; }
+    .menu .open-menu span {
+      margin: 0;
+      padding: 0; }
+    .menu .open-menu[class*="icon-"] {
+      border: none;
+      display: inline;
+      position: absolute;
+      top: 0;
+      right: 15px; }
+  .menu div.content-padding {
+    padding: 1em; }
   .menu a {
     color: #fff; }
+  .menu.top {
+    z-index: 100; }
+  .menu#goToPanel {
+    background: #443333; }
+    .menu#goToPanel .open-menu {
+      background: #443333; }
+  .menu#helpPanel {
+    background: #334433; }
+    .menu#helpPanel .open-menu {
+      background: #334433;
+      top: 164px; }
+    .menu#helpPanel ul li {
+      list-style-position: inside;
+      margin-bottom: 1em; }
+  .menu#settingsPanel {
+    background: #333344; }
+    .menu#settingsPanel .open-menu {
+      background: #333344;
+      top: 284px; }
 
 .reading-mode #dock {
   background: none;
