--- a/css/_dock.scss
+++ b/css/_dock.scss
@@ -1,6 +1,6 @@
 #dock {
-	background: #fff;
-	border-bottom: 1px solid #ccc;
+	background: none;
+	border: none;
 	font-family: 'Helvetica Neue';
 	font-weight: 100;
 	height: $dock-height;
@@ -11,7 +11,6 @@
 	top: 0;
 	z-index: 9;
 	select {
-		background: none;
 		font-family: 'Helvetica Neue';
 		font-weight: 100;
 	}
@@ -24,44 +23,6 @@
 		text-align: center;
 		#goToReference {
 			max-width: 200px;
-		}
-	}
-	nav {
-		line-height: $dock-height;
-		position: absolute;
-		top: 0;
-		white-space: nowrap;
-	}
-	nav.right {
-		right: 4px;
-	}
-	nav.left {
-		left: 4px;
-	}
-	nav a,
-	nav span,
-	nav form {
-		display: inline-block;
-	}
-	nav a {
-		border-radius: 3px;
-		color:#000;
-		cursor:pointer;
-		line-height: 2.5em;
-
-		opacity:.4;
-		padding: 0 1em;
-		text-decoration: none;
-		-webkit-transition: opacity .5s; // For Safari
-	}
-	nav a:hover { opacity: 1; }
-	nav span[class*="icon-"] {
-		margin-right: .5em;
-	}
-	nav span.link-text {
-		display: none;
-		@media only screen and (min-width: 1200px) {
-			display: inline;
 		}
 	}
 	&.input {
@@ -79,5 +40,16 @@
 		#goToReference {
 			display: none;
 		}
+	}
+	.reading-mode-version {
+		display: inline;
+	}
+	.goToReference {
+		background: transparent;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
+//		box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+		display: inline-block;
+		padding: 0 10px;
 	}
 }
