--- a/css/layout.css
+++ b/css/layout.css
@@ -120,9 +120,6 @@ body > .wrapper {
 .verse {
   line-height: 1.4em; }
 
-.reference span {
-  white-space: nowrap; }
-
 .verse h1 {
   text-align: center;
   line-height: 150%;
@@ -407,49 +404,53 @@ note:hover {
 #colorSelector {
   display: inline-block; }
 
-dvnnm {
-  text-transform: uppercase; }
-
-#verse .loading {
-  padding: 1em;
-  text-align: center; }
-
-#verse ol li {
-  margin: 0 0 0 20px;
-  margin-left: 50%; }
-
-#verse ol li .wrapper {
-  margin-left: -100%;
-  width: 200%; }
-
-.hebrew {
-  direction: rtl;
-  display: none;
-  font-size: 140%;
-  font-family: 'Times New Roman', Times serif;
-  line-height: 1em;
-  text-align: right; }
-
-.english {
-  float: right;
-  width: 45%;
-  padding: 0 2%; }
-
-.original {
-  display: block;
-  float: left;
-  padding: 0 4% 0 2%;
-  width: 43%; }
-
-.hebrew span {
-  margin: 0 2px; }
-
-.hebrew seg {
-  display: none; }
-
-.verse .wrapper {
-  display: inline-block;
-  vertical-align: top; }
+.referencePanel {
+  margin: 50px 40px 0 70px; }
+  @media (min-width: 768px) {
+    .referencePanel {
+      margin: 50px 270px 0; } }
+  .referencePanel dvnnm {
+    text-transform: uppercase; }
+  .referencePanel #verse .loading {
+    padding: 1em;
+    text-align: center; }
+  .referencePanel .hebrew {
+    direction: rtl;
+    display: none;
+    font-size: 140%;
+    font-family: 'Times New Roman', Times serif;
+    line-height: 1em;
+    text-align: right; }
+  .referencePanel .english {
+    width: 95%;
+    padding: 0 2%; }
+  .referencePanel .original {
+    display: none; }
+  @media (min-width: 480px) {
+    .referencePanel .reference span {
+      white-space: nowrap; } }
+  @media (min-width: 960px) {
+    .referencePanel #verse ol li {
+      margin: 0 0 0 50%; }
+      .referencePanel #verse ol li .wrapper {
+        margin-left: -100%;
+        width: 200%; }
+        .referencePanel #verse ol li .wrapper .english {
+          float: right;
+          width: 45%;
+          padding: 0 2%; }
+        .referencePanel #verse ol li .wrapper .original {
+          display: block;
+          float: left;
+          padding: 0 4% 0 2%;
+          width: 43%; } }
+  .referencePanel .hebrew span {
+    margin: 0 2px; }
+  .referencePanel .hebrew seg {
+    display: none; }
+  .referencePanel .verse .wrapper {
+    display: inline-block;
+    vertical-align: top; }
 
 .popup {
   background: rgba(255, 255, 255, 0.5);
@@ -512,7 +513,7 @@ select {
   padding: .3em 0; }
 
 input {
-  text-indent: .5em;
+  text-indent: .3em;
   width: 100%; }
 
 input[type=checkbox] {
@@ -565,7 +566,7 @@ form.search #advanced {
     line-height: 1.8em;
     text-align: center; }
     #dock .heading-wrapper #goToReference {
-      max-width: 200px; }
+      max-width: 175px; }
   #dock.input .lookup {
     display: none; }
   #dock.input #goToReference {
@@ -583,23 +584,18 @@ form.search #advanced {
     display: inline-block;
     padding: 0 10px; }
 
-.referencePanel {
-  margin: 50px 40px 0; }
-  @media (min-width: 960px) {
-    .referencePanel {
-      margin: 50px 240px 0; } }
-  .referencePanel .wordControlPanel {
-    clear: both; }
-    .referencePanel .wordControlPanel .close {
-      color: #000;
-      height: 18px;
-      line-height: 1em;
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: 5px;
-      width: 18px;
-      text-align: center; }
+.referencePanel .wordControlPanel {
+  clear: both; }
+  .referencePanel .wordControlPanel .close {
+    color: #000;
+    height: 18px;
+    line-height: 1em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px;
+    width: 18px;
+    text-align: center; }
 
 .goToPanel, .searchPanel {
   background: #fff;
