--- a/css/layout.scss
+++ b/css/layout.scss
@@ -32,7 +32,8 @@ body > .wrapper { height: 0;}
 
 .panel .heading {height:10%;}
 .verse {color: #000;}
-.verse .added, transchange {color:#aaa; font-style: italic;}
+.verse span[class] {color: #000; font-style: normal;}
+.verse span, .verse span.added, transchange {color:#aaa; font-style: italic;}
 .verse {line-height:1.4em; }
 .verse h1 {text-align: center; line-height: 150%; font-family: 'Helvetica Neue'; font-weight: 100; }
 span, a.word-tree {margin: 0 -2px; padding: 0 2px; position: relative; border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;cursor:pointer;}
