--- a/css/layout.css
+++ b/css/layout.css
@@ -113,7 +113,7 @@ body > .wrapper {
 .verse {
   color: #000; }
 
-.verse span[class] {
+.verse .original span, .verse span[class] {
   color: #000;
   font-style: normal; }
 
