--- a/css/_reference.scss
+++ b/css/_reference.scss
@@ -12,16 +12,17 @@
 		}
 	}
 
-	.hebrew {
+	.hebrew.original {
 		direction: rtl;
 		font-family: 'Times New Roman', Times serif;
 		font-size: 140%;
 		line-height: 1em;
 		text-align: right;
+		span { margin: 0 2px; }
 	}
 
-	.english { width: 95%; padding: 0 2%; }
-	.original { display: none; }
+	.right { width: 95%; padding: 0 2%; }
+	.left { display: none; }
 
 	@media ( min-width: 480px ) {
 		.reference span {white-space: nowrap;}
@@ -33,13 +34,12 @@
 			.wrapper {
 				margin-left: -100%;
 				width: 200%;
-				.english { float: right; width: 45%; padding: 0 2%; }
-				.original { display: block; float: left; padding: 0 4% 0 2%; width: 43%; }
+				.right { float: right; width: 45%; padding: 0 2%; }
+				.left { display: block; float: left; padding: 0 4% 0 2%; width: 43%; }
 			}
 		}
 	}
-	.hebrew span { margin: 0 2px; }
-	.hebrew seg {display:none;}
+
 
 	.verse .wrapper { display:inline-block; vertical-align:top; }
 }
