--- a/css/layout.css
+++ b/css/layout.css
@@ -417,16 +417,18 @@ note:hover {
   .referencePanel #verse .loading {
     padding: 1em;
     text-align: center; }
-  .referencePanel .hebrew {
+  .referencePanel .hebrew.original {
     direction: rtl;
     font-family: 'Times New Roman', Times serif;
     font-size: 140%;
     line-height: 1em;
     text-align: right; }
-  .referencePanel .english {
+    .referencePanel .hebrew.original span {
+      margin: 0 2px; }
+  .referencePanel .right {
     width: 95%;
     padding: 0 2%; }
-  .referencePanel .original {
+  .referencePanel .left {
     display: none; }
   @media (min-width: 480px) {
     .referencePanel .reference span {
@@ -437,19 +439,15 @@ note:hover {
       .referencePanel #verse ol li .wrapper {
         margin-left: -100%;
         width: 200%; }
-        .referencePanel #verse ol li .wrapper .english {
+        .referencePanel #verse ol li .wrapper .right {
           float: right;
           width: 45%;
           padding: 0 2%; }
-        .referencePanel #verse ol li .wrapper .original {
+        .referencePanel #verse ol li .wrapper .left {
           display: block;
           float: left;
           padding: 0 4% 0 2%;
           width: 43%; } }
-  .referencePanel .hebrew span {
-    margin: 0 2px; }
-  .referencePanel .hebrew seg {
-    display: none; }
   .referencePanel .verse .wrapper {
     display: inline-block;
     vertical-align: top; }
